--- a/views/index.erb
+++ b/views/index.erb
@@ -2,3 +2,5 @@
 <form action="/messages" method="post" id="message_form">
     <input name="message" type="text" class="new_message" />
 </form>
+
+<div id="status"></div>
