--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,9 +7,32 @@
     <script type="text/javascript">
       $(document).ready(function() {
         var pusher = new Pusher('26f4232b489d7c8a2e22');
-        var channel = pusher.subscribe('test_channel');
-        channel.bind('new_message', function(data) {
+        pusher.connection.bind('state_change', function(states) {
+          $('div#status').text("Pusher's current state is " + states.current);
+        });
+        var board_connect_channel = pusher.subscribe('board_connect_channel');
+        var testing_channel = pusher.subscribe('testing_channel');
+        var board_presence_channel = pusher.subscribe('presence-of-boards');
+        testing_channel.bind('new_message', function(data) {
           $('.messages').append("<div class=\"message\">" + data.message + "</div>");
+        });
+        board_connect_channel.bind('connection', function(data) {
+          $('.messages').append("<div class=\"message\">" + data.message + "</div>");
+        });
+        board_presence_channel.bind('board_connect', function(data) {
+          $('.messages').append("<div class=\"message\">" + data.message + "</div>");
+        });
+        board_presence_channel.bind('pusher:member_added', function(member) {
+          // console.log("NEW PLAYER IN THE GAME");
+          // console.log(member);
+          // update_member_count(members.count);
+          // members.each(function(member) {
+            // if(member.id !== '1') {
+                console.log(member)
+                $('.messages').append("<div class=\"message\">" + member + "</div>");
+            // }
+            // add_member(member.id, member.info);
+          // });
         });
         Pusher.log = function(message) {
           if (window.console && window.console.log) window.console.log(message);
